# localvox

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cargo.toml.docker  Dockerfile  Dockerfile.cpu  Makefile  README.md  SECURITY.md  client-config.example.json  docker-compose.yml
.github/workflows/: docker-release.yml  release.yml  rust.yml
client-reliable/: Cargo.toml  README.md
client-reliable/src/: audio.rs  config.rs  main.rs  summarize.rs  transcript.rs  tui.rs  types.rs  ws.rs
docs/: tls-trust.md
server-reliable/: Cargo.toml  ENSEMBLE.md  FEATURES_CHECKLIST.md  README.md  settings.docker.cpu.json  settings.docker.example.json  settings.docker.json  settings.example.json
server-reliable/src/: audio_writer.rs  client_handler.rs  config.rs  dispatcher.rs  gigaam.rs  hallucination.rs  llm_corrector.rs  main.rs  overlap.rs  processor.rs  session.rs  session_cleanup.rs  session_registry.rs  tls.rs  transcript_postprocess.rs  vad.rs
server-reliable/src/asr/: gigaam.rs  mod.rs  parakeet.rs  silero.rs  whisper.rs
tools/: BENCH_SOVA.md  PARAKEET_SETUP.md  SILERO_STT_SETUP.md  bench_sova.py  download_gigaam.ps1  download_gigaam.sh  download_parakeet.ps1  gen-dev-certs.ps1  gen-dev-certs.sh  requirements-bench.txt  setup.sh
wss-probe/: Cargo.toml  README.md
wss-probe/src/: main.rs
youtube-transcribe/: Cargo.toml  README.md  settings.example.json  settings.json
youtube-transcribe/src/: config.rs  main.rs  overlap.rs  state.rs  worker.rs
