[package]
name = "live-transcribe-client-reliable"
version = "0.1.0"
edition = "2021"
description = "Клиент для reliable-transcribe: отображение отставания распознавания и размера папки"
default-run = "live-transcribe-client-reliable"

[[bin]]
name = "live-transcribe-client-reliable"
path = "src/main.rs"

[dependencies]
cpal = "0.17"
tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
http = "1"
native-tls = "0.2"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
ctrlc = "3"
ureq = { version = "2", default-features = false, features = ["json"] }
sha2 = "0.10"
hex = "0.4"

# Windows: WASAPI для loopback (захват системного звука)
[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
