[package]
name = "live-transcribe-server-reliable"
version = "0.1.0"
edition = "2021"
description = "Reliable disk-buffered transcription WebSocket server (GGML Whisper)"

[[bin]]
name = "live-transcribe-server-reliable"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
whisper-rs = { version = "0.13", features = ["cuda", "raw-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc-vad = "0.4"
hound = "3.5"
chrono = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
sherpa-rs = { version = "0.6", default-features = false, features = ["sys", "cuda"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
