[package]
name = "live-transcribe-server-reliable"
version = "0.1.0"
edition = "2021"
description = "Reliable disk-buffered transcription WebSocket server (GGML Whisper)"

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda", "sherpa-rs/cuda"]

[[bin]]
name = "live-transcribe-server-reliable"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
whisper-rs = { version = "0.13", features = ["raw-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc-vad = "0.4"
hound = "3.5"
chrono = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
sherpa-rs = { version = "0.6", default-features = false, features = ["sys"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
hex = "0.4"
http = "1"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-util = { version = "0.7", features = ["io"] }
