[package]
name = "youtube-transcribe"
version = "0.1.0"
edition = "2021"
description = "Очередь транскрипции YouTube через localvox, TUI, durability"

[[bin]]
name = "youtube-transcribe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "fs", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
